--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,6 +3,9 @@
 
 :root {
   --primary: #fe2c55;
+  //Default Layout
+  --default-layout-header-height: 60px;
+  --default-layout-header-width: 1150px;
 }
 * {
   box-sizing: border-box;
