--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -1,12 +1,82 @@
 .wrapper {
+  --search-boder-radius: 92px;
   height: var(--default-layout-header-height);
   width: 100%;
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
   display: flex;
   justify-content: center;
+  margin: 20px 0;
 }
 .content {
   height: 100%;
   width: var(--default-layout-header-width);
-  background-color: #ccc;
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+}
+.search,
+.search-result {
+  width: 356px;
+}
+.search {
+  position: relative;
+  border: 1.5px solid transparent;
+  height: var(--search-height);
+  border-radius: var(--search-boder-radius);
+  background-color: rgba(22, 24, 35, 0.06);
+  padding-left: 16px;
+  justify-items: center;
+  display: flex;
+  input {
+    caret-color: var(--primary);
+    color: var(--black);
+    padding: 12px 0;
+    font-size: 1.6rem;
+    outline: none;
+    background-color: transparent;
+    flex: 1;
+  }
+  input:not(:placeholder-shown) ~ .search-button {
+    color: rgba(22, 24, 35, 0.75);
+  }
+  &:focus-within {
+    border-color: rgba(22, 24, 35, 0.2);
+  }
+}
+.search-clear,
+.loading {
+  position: absolute;
+  right: 52px;
+  top: 50%;
+  margin-right: 10px;
+  transform: translateY(-50%);
+  color: rgba(22, 24, 35, 0.34);
+}
+.search-button {
+  width: 52px;
+  height: 100%;
+  border-top-right-radius: var(--search-boder-radius);
+  border-bottom-right-radius: var(--search-boder-radius);
+  font-size: 1.8rem;
+  color: rgba(22, 24, 35, 0.3);
+  &:hover {
+    cursor: pointer;
+    background-color: rgba(22, 24, 35, 0.03);
+  }
+  &:active {
+    background-color: rgba(22, 24, 35, 0.06);
+  }
+}
+.action {
+  display: flex;
+  align-items: center;
+}
+.customs-plugin {
+  color: rgba(22, 24, 35, 0.6);
+}
+.upload {
+  border: 1px solid var(--border-color);
+  &:hover {
+    background-color: rgba(22, 24, 35, 0.03);
+  }
 }
