--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,8 +1,19 @@
 @import 'normalize.css';
-@import url('https://fonts.google.com/specimen/IBM+Plex+Sans?query=ibm+');
-
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
 :root {
-  --primary: #fe2c55;
+  --primary: rgba(254, 44, 85, 1);
+  --black: #000;
+  --white: rgba(255, 255, 255, 1);
+  --text-color: #333;
+  --border-color: rgba(22, 24, 35, 0.12);
+  --tikets-check: rgb(32, 213, 236);
+  //Default Layout
+  --default-layout-header-height: 60px;
+  --default-layout-header-width: 1150px;
+  --default-border-radius: 92px;
+  --search-bottom-width: 52px;
+  --search-height: 46px;
+  --search-margin: calc(var(--search-height) / 5);
 }
 * {
   box-sizing: border-box;
@@ -19,7 +30,7 @@ body {
   line-height: 1.5;
   margin: 0;
   padding: 0;
-  color: #333;
+  color: var(--text-color);
   background-color: #fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -28,4 +39,20 @@ body {
   text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+}
+.line {
+  height: calc(var(--search-height) / 2);
+  width: 1px;
+  margin: var(--search-margin) 0;
+  background-color: rgba(22, 24, 35, 0.12);
+}
+button,
+input,
+[tabindex] {
+  outline: none;
+  border: none;
+}
+a[href] {
+  color: var(--text-color);
+  text-decoration: none;
 }
