--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -1,10 +1,9 @@
 .wrapper {
-  --search-boder-radius: 92px;
   height: var(--default-layout-header-height);
-  width: 100%;
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   margin: 20px 0;
 }
 .content {
@@ -12,24 +11,27 @@
   width: var(--default-layout-header-width);
   display: flex;
   justify-content: space-between;
-  justify-items: center;
+  align-items: center;
+  margin: 20px 0;
 }
 .search,
 .search-result {
-  width: 356px;
+  width: 361px;
 }
 .search {
   position: relative;
+  display: flex;
   border: 1.5px solid transparent;
+  align-items: center;
+  width: 361px;
   height: var(--search-height);
-  border-radius: var(--search-boder-radius);
+  border-radius: var(--default-border-radius);
   background-color: rgba(22, 24, 35, 0.06);
   padding-left: 16px;
   justify-items: center;
-  display: flex;
   input {
     caret-color: var(--primary);
-    color: var(--black);
+    color: rgba(22, 24, 35, 0.3);
     padding: 12px 0;
     font-size: 1.6rem;
     outline: none;
@@ -47,7 +49,6 @@
 .search-clear,
 .loading {
   position: absolute;
-  //   top: 50%;
   right: calc(var(--search-bottom-width) + 16px);
   background: transparent;
   color: rgba(22, 24, 35, 0.34);
@@ -79,7 +80,6 @@
 }
 .action {
   display: flex;
-  align-items: center;
 }
 .customs-plugin {
   color: rgba(22, 24, 35, 0.6);
