--- a/src/components/GlobalStyles/GlobalStyles.module.scss
+++ b/src/components/GlobalStyles/GlobalStyles.module.scss
@@ -14,6 +14,7 @@
   --search-bottom-width: 52px;
   --search-height: 46px;
   --search-margin: calc(var(--search-height) / 5);
+  --default-layout-horizontal-spacer: 24px;
 }
 * {
   box-sizing: border-box;
