--- a/src/components/Popper/MenuSetting/MenuSetting.module.scss
+++ b/src/components/Popper/MenuSetting/MenuSetting.module.scss
@@ -16,6 +16,36 @@
 
 //MenuItem
 .menu-item {
+  line-height: 1.8rem;
+  &:hover {
+    background-color: rgba(22, 24, 35, 0.03);
+  }
+}
+
+//HeaderLanguage
+.header {
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 0;
+  height: 50px;
+}
+.back-btn {
+  height: 50px;
+  cursor: pointer;
+  background-color: transparent;
+  font-size: 1.6rem;
+  padding: 0 30px;
+  // width: 100%;
+}
+
+.header-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
   &:hover {
     background-color: rgba(22, 24, 35, 0.03);
   }
