--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -79,9 +79,12 @@
   margin: 10px 15px;
   padding: 0;
 }
+
 .action {
   display: flex;
+  align-items: center;
 }
+//action no user
 .customs-plugin {
   color: rgba(22, 24, 35, 0.6);
 }
@@ -96,4 +99,35 @@
   width: 1px;
   margin: var(--search-margin) 0;
   background-color: rgba(22, 24, 35, 0.3);
+}
+
+//action user
+.current-user {
+  display: flex;
+}
+.avatar-user {
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  object-fit: cover;
+  background-image: transparent;
+  border: transparent;
+}
+.action-btn {
+  background-color: transparent;
+  // color:  rgba(22, 24, 35, 0.6);
+  font-size: 2.6rem;
+  padding: 20px;
+  cursor: pointer;
+  .iconBackground {
+    background: var(--white);
+  }
+}
+.icon-no {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  object-fit: cover;
+  background-image: transparent;
+  border: transparent;
 }
