--- a/src/components/Popper/MenuSetting/MenuSetting.module.scss
+++ b/src/components/Popper/MenuSetting/MenuSetting.module.scss
@@ -2,17 +2,14 @@
 
 .wrapper {
   width: 261px;
-
   background: rgb(255, 255, 255);
   box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
   border-radius: 8px;
   max-height: min(100vh - 96px - 60px, 734px);
   min-height: 100px;
-  margin-top: -25px;
+  margin-top: -15px;
   margin-right: 25px;
-  overflow: hidden;
-
-  .menu-item {
+  .wrapper-item {
     justify-content: flex-start;
     border-radius: 0;
     margin-left: 0;
@@ -25,7 +22,8 @@
 }
 
 //MenuItem
-.menu-item {
+.wrapper-item {
+  margin-left: 0;
   line-height: 1.8rem;
   &.separate {
     border-top: 1px soild rgba(22, 24, 35, 0.12);
