--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -18,7 +18,8 @@
   user-select: none;
 
   + .wrapper {
-    margin-left: 8px;
+    margin: 0 8px;
+    padding: 8px;
   }
   &.disabled {
     pointer-events: none;
